[package]
name = "harmonia"
version = "0.1.1"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
description = "Functional harmony helpers"
repository = "https://github.com/arclabs561/harmonia"
homepage = "https://github.com/arclabs561/harmonia"
documentation = "https://docs.rs/harmonia"
readme = "README.md"
keywords = ["music", "music-theory", "harmony", "roman-numerals"]
categories = ["multimedia::audio"] # closest stable crates.io category; scope is symbolic theory

[workspace]

[dependencies]
clap = { version = "4.5", features = ["derive", "wrap_help"], optional = true }

[features]
default = []
cli = ["dep:clap"]

[[bin]]
name = "harmonia"
test = false
path = "src/bin/harmonia.rs"
required-features = ["cli"]
